--- a/services.html
+++ b/services.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Our Services – Growth Wiz</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
-
   <style>
     body {
       font-family: "Poppins", sans-serif;
@@ -19,7 +18,6 @@
       min-height: 100vh;
       overflow-x: hidden;
     }
-
     .container {
       max-width: 800px;
       width: 90%;
@@ -29,20 +27,17 @@
       box-shadow: 0 0 20px rgba(0, 255, 195, 0.05);
       margin-top: 50px;
     }
-
     h1 {
       text-align: center;
       color: #00ffd5;
       margin-bottom: 10px;
     }
-
     p {
       text-align: center;
       color: #cccccc;
       margin-bottom: 30px;
       font-size: 14px;
     }
-
     .service {
       background: #2a2d3c;
       padding: 20px;
@@ -53,12 +48,10 @@
       opacity: 0;
       transform: translateY(40px);
     }
-
     .service.visible {
       opacity: 1;
       transform: translateY(0);
     }
-
     .service h2 {
       margin: 0;
       color: #ffaa00;
@@ -68,34 +61,28 @@
       justify-content: space-between;
       align-items: center;
     }
-
     .toggle-icon {
       font-size: 18px;
       transition: transform 0.3s;
     }
-
     .service.open .toggle-icon {
       transform: rotate(180deg);
     }
-
     .service-content {
       display: none;
       margin-top: 10px;
       color: #cccccc;
       font-size: 14px;
     }
-
     .service.open .service-content {
       display: block;
     }
-
     .price {
       margin-top: 8px;
       color: #cccccc;
       font-weight: 500;
       font-size: 14px;
     }
-
     .subscribe-btn {
       margin-top: 15px;
       padding: 10px 20px;
@@ -107,11 +94,9 @@
       font-weight: bold;
       transition: transform 0.2s ease;
     }
-
     .subscribe-btn:hover {
       transform: scale(1.04);
     }
-
     .back {
       display: block;
       text-align: center;
@@ -120,18 +105,30 @@
       color: #ffaa00;
       font-size: 14px;
     }
-
     .back:hover {
       text-decoration: underline;
     }
-
     .tagline {
       text-align: center;
       color: #ffaa00;
       font-size: 20px;
       margin-top: 15px;
     }
-
+    /* All Plans Button */
+    #allPlansBtn {
+      margin-top: 15px;
+      padding: 10px 20px;
+      background: linear-gradient(to right, #ffaa00, #00ffd5);
+      color: #000;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: transform 0.2s ease;
+    }
+    #allPlansBtn:hover {
+      transform: scale(1.04);
+    }
     /* Subscription popup */
     .popup {
       position: fixed;
@@ -142,11 +139,9 @@
       align-items: center;
       justify-content: center;
     }
-
     .popup.active {
       display: flex;
     }
-
     .popup-content {
       background: #1c1f2b;
       padding: 25px;
@@ -156,12 +151,10 @@
       box-shadow: 0 0 15px rgba(0, 255, 195, 0.1);
       text-align: center;
     }
-
     .popup-content h3 {
       margin-bottom: 15px;
       color: #00ffd5;
     }
-
     input, select {
       width: 100%;
       padding: 10px;
@@ -171,7 +164,6 @@
       outline: none;
       font-family: inherit;
     }
-
     .close-popup {
       margin-top: 10px;
       background: none;
@@ -180,8 +172,6 @@
       cursor: pointer;
       font-weight: bold;
     }
-
-    /* Footer section */
     footer {
       text-align: center;
       margin-top: 40px;
@@ -189,16 +179,13 @@
       font-size: 13px;
       color: #cccccc;
     }
-
     footer a {
       color: #00ffd5;
       text-decoration: none;
     }
-
     footer a:hover {
       text-decoration: underline;
     }
-
     @media screen and (max-width: 600px) {
       .container {
         padding: 20px;
@@ -267,10 +254,13 @@
 
   <div class="tagline">Grow your startup, Digitally with us</div>
 
+  <!-- ✅ All Plans Button -->
+  <button id="allPlansBtn">View All Plans</button>
+
   <!-- Footer Section -->
   <footer>
     <p><strong>Growth Wiz</strong> © 2025</p>
-    <p>📞 <a href="tel:+911234567890">+91 12345 67890</a> | 📸 
+    <p>📞 <a href="tel:+917207240973">+91 72072 40973</a> | 📸 
       <a href="https://instagram.com/growthwiz" target="_blank">@growthwiz</a>
     </p>
   </footer>
@@ -315,12 +305,17 @@
     const popup = document.getElementById("subscriptionPopup");
     const subscribeButtons = document.querySelectorAll(".subscribe-btn");
     const closePopup = document.querySelector(".close-popup");
+    const allPlansBtn = document.getElementById("allPlansBtn");
 
     subscribeButtons.forEach(btn => {
       btn.addEventListener("click", (e) => {
         e.stopPropagation();
         popup.classList.add("active");
       });
+    });
+
+    allPlansBtn.addEventListener("click", () => {
+      popup.classList.add("active");
     });
 
     closePopup.addEventListener("click", () => {
@@ -333,3 +328,4 @@
   </script>
 </body>
 </html>
+
